[tool.poetry]
name = "nlpclassproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.8.0"
pandas = "^1.4.2"
numpy = "^1.22.3"
Unidecode = "^1.3.4"
emoji = "^1.7.0"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
